<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"/>

    <item
        android:id="@+id/nav_add_friend"
        android:icon="@drawable/add_friends"
        android:title="@string/add_friend" />


    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/wallet"
        android:title="@string/wallet" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />


</menu>